--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,9 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  hello: 'Hello world'
+  views:
+    pagination:
+      previous: '&lt; Previous'
+      next: 'Next &gt;'
+      truncate: '...'
